// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Field table 1x1 with empty cell 1`] = `
<table
  className="css-13wua49"
>
  <tbody>
    <tr
      className="css-15usuub"
    >
      <td
        className="css-12sve5v"
        id="id1-1"
        onClick={[Function]}
      >
         
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Field table 1x1 with filled cell 1`] = `
<table
  className="css-13wua49"
>
  <tbody>
    <tr
      className="css-15usuub"
    >
      <td
        className="css-1rdrs4s"
        id="id1-1"
        onClick={[Function]}
      >
        X
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Field table 3x4 with different cells 1`] = `
<table
  className="css-13wua49"
>
  <tbody>
    <tr
      className="css-15usuub"
    >
      <td
        className="css-1rdrs4s"
        id="id1-1"
        onClick={[Function]}
      >
        X
      </td>
      <td
        className="css-12sve5v"
        id="id2-1"
        onClick={[Function]}
      >
         
      </td>
      <td
        className="css-12sve5v"
        id="id3-1"
        onClick={[Function]}
      >
         
      </td>
    </tr>
    <tr
      className="css-15usuub"
    >
      <td
        className="css-12sve5v"
        id="id1-2"
        onClick={[Function]}
      >
         
      </td>
      <td
        className="css-1rdrs4s"
        id="id2-2"
        onClick={[Function]}
      >
        X
      </td>
      <td
        className="css-12sve5v"
        id="id3-2"
        onClick={[Function]}
      >
         
      </td>
    </tr>
    <tr
      className="css-15usuub"
    >
      <td
        className="css-12sve5v"
        id="id1-3"
        onClick={[Function]}
      >
         
      </td>
      <td
        className="css-12sve5v"
        id="id2-3"
        onClick={[Function]}
      >
         
      </td>
      <td
        className="css-12sve5v"
        id="id3-3"
        onClick={[Function]}
      >
         
      </td>
    </tr>
    <tr
      className="css-15usuub"
    >
      <td
        className="css-12sve5v"
        id="id1-4"
        onClick={[Function]}
      >
         
      </td>
      <td
        className="css-12sve5v"
        id="id2-4"
        onClick={[Function]}
      >
         
      </td>
      <td
        className="css-1rdrs4s"
        id="id3-4"
        onClick={[Function]}
      >
        X
      </td>
    </tr>
  </tbody>
</table>
`;
